# RouterView

./: .dockerignore  .env.compose.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  cliff.toml  compose.oidc-ca.yaml  compose.oidc.yaml  compose.yaml  oui.csv
.github/workflows/: ci.yml  release.yml
backend/: .env.example  Cargo.toml
backend/src/: auth.rs  config.rs  config_store.rs  error.rs  key_cli.rs  main.rs  oidc.rs  oidc_integration_tests.rs  oui.rs  oui_data.json  router.rs  secrets.rs  state.rs
backend/src/api/: devices.rs  mod.rs  oui.rs  probes.rs  system.rs  traffic.rs
backend/src/backends/: mod.rs
backend/src/backends/routeros/: client.rs  mod.rs  models.rs  transform.rs
backend/src/db/: key_management.rs  maintenance.rs  mod.rs  schema.rs  traffic_v4.rs  types.rs
backend/src/poller/: engine.rs  mod.rs  transform.rs
backend/src/routeros/: client.rs  models.rs
backend/src/ws/: handler.rs  limits.rs  mod.rs  protocol.rs  session.rs  tracker.rs
deploy/: Caddyfile
docs/: operations.md
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
frontend/patches/: @vue__devtools-api@6.6.4.patch  README.md
frontend/scripts/: check-bundle-budget.mjs
frontend/src/: App.test.ts  App.vue  env.d.ts  main.ts
frontend/src/api/: index.test.ts  index.ts
scripts/: build-oui.mjs  generate-third-party-licenses.mjs  generate-third-party-licenses.test.mjs  generate-third-party-notices.mjs  prepare-third-party-licenses.mjs  verify-release-version.mjs
(+81 files in other folders)
