[package]
name = "routerview-backend"
version = "0.1.0"
edition = "2021"
description = "RouterOS Dashboard Backend - polls RouterOS REST API and streams data via WebSocket"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["ws", "macros"] }
# HTTP client for RouterOS
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
# Async runtime
tokio = { version = "1", features = ["full"] }
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Time
chrono = { version = "0.4", features = ["serde"] }
# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# CORS
tower-http = { version = "0.6", features = ["cors", "trace"] }
# Error handling
thiserror = "2"
# URL handling
url = "2"
# UUID for connection IDs
uuid = { version = "1", features = ["v4"] }
# Env loading
dotenvy = "0.15"
# Async trait
async-trait = "0.1"
# WebSocket stream utilities
futures-util = "0.3"
# Base64 encoding for auth
base64 = "0.22"
# ICMP ping probing
surge-ping = "0.8"
rusqlite = { version = "0.37.0", features = ["backup", "bundled"] }
# Authentication and secret storage
argon2 = "0.5"
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"
ipnet = "2"
rpassword = "7"
hex = "0.4"
libc = "0.2"
zeroize = "1"
